Fixed: Low battery blueprint is now tolerant of sensors that don't have a device_class, and sensors with non-integer battery state (e.g. unknown) Changed: Low battery notification threshold changed from 15 to 25

--- a/blueprints/automation/sbyx/low-battery-level-detection-notification-for-all-battery-sensors.yaml
+++ b/blueprints/automation/sbyx/low-battery-level-detection-notification-for-all-battery-sensors.yaml
@@ -115,8 +115,8 @@ variables:
   exclude9: !input 'exclude9'
   sensors: "{% set result = namespace(sensors=[]) %} {% set exclude = [exclude0, exclude1,\
     \ exclude2, exclude3, exclude4, exclude5, exclude6, exclude7, exclude8, exclude9]\
-    \ %} {% for state in states.sensor | selectattr('attributes.device_class', '==',\
-    \ 'battery') %}\n  {% if 0 < state.state | int < threshold | int and not state.entity_id\
+    \ %} {% for state in states.sensor | selectattr('attributes.device_class','defined') | selectattr('attributes.device_class','==','battery')\n\
+    \ %}\n  {% if 0 <= state.state | int(-1) < threshold | int and not state.entity_id\
     \ in exclude %}\n    {% set result.sensors = result.sensors + [state.name + ' (%s%%)'|format(state.state)] %}\n\
     \  {% endif %}\n{% endfor %} {% for state in states.binary_sensor | selectattr('attributes.device_class',\
     \ '==', 'battery') | selectattr('state', '==', 'on') %}\n  {% if not state.entity_id\
