--- a/automations.yaml
+++ b/automations.yaml
@@ -690,10 +690,16 @@
     conditions:
     - condition: time
       after: 07:30
-      before: 08:30
+      before: 08:30:00
     - condition: time
       after: '17:00'
       before: '20:00'
+    - condition: time
+      after: 07:30:00
+      before: '20:00:00'
+      weekday:
+      - sat
+      - sun
   action:
   - service: light.turn_on
     data:
