--- a/esphome/esp32-bt-proxy-upstairs.yaml
+++ b/esphome/esp32-bt-proxy-upstairs.yaml
@@ -22,6 +22,7 @@ sensor:
   platform: ble_client
   ble_client_id: oclean
   name: "Oclean Battery"
+  device_class: "battery"
   service_uuid: '180f'
   characteristic_uuid: '2a19'
   icon: 'mdi:battery'
