Updated: Xmas light group updated to include new light controllers Updated: Lovelace light toggles updated with new xmas light controls

--- a/includes/groups.yaml
+++ b/includes/groups.yaml
@@ -11,3 +11,6 @@ xmas:
     - light.advent
     - light.window
     - light.christmas_star
+    - light.tree_1
+    - light.tree_2
+    - light.tree_3
