--- a/automations.yaml
+++ b/automations.yaml
@@ -1260,6 +1260,7 @@
       - service: notify.mobile_app_tom_s_phone
         data:
           message: Low battery alert for {{sensors}}
+        enabled: true
       exclude1: sensor.toms_phone_battery_level
 - id: '1609885331052'
   alias: 'Lights: Turn off boys'' light at bedtime'
