--- a/automations.yaml
+++ b/automations.yaml
@@ -62,7 +62,7 @@
   action:
   - data:
       message: Nobody is home right now
-    service: notify.mobile_app_tom_s_phone
+    service: notify.mobile_app_toms_phone
 - id: '1576676147603'
   alias: 'Lights on: Nobody home and lights on (repeat)'
   description: ''
@@ -113,7 +113,7 @@
       message: "{%- for person in states.group.all_persons.attributes.entity_id -%}\n
         \ {%- if is_state(person, 'home') -%} \n    {{ state_attr(person, 'friendly_name')
         }} just arrived home\n  {%- endif -%}\n{%- endfor -%} \n"
-    service: notify.mobile_app_tom_s_phone
+    service: notify.mobile_app_toms_phone
   mode: single
 - id: '1576773914306'
   alias: 'Lights: Handle "Lights Off" command'
@@ -170,7 +170,7 @@
   action:
   - data:
       message: Tom left work 2 minutes ago
-    service: notify.mobile_app_tom_s_phone
+    service: notify.mobile_app_toms_phone
 - id: '1578494385278'
   alias: Presence - Left work (Anna)
   description: Send a Telegram notification when Anna been away from work for 2 minutes
@@ -182,7 +182,7 @@
     to: not_home
   condition: []
   action:
-  - service: notify.mobile_app_tom_s_phone
+  - service: notify.mobile_app_toms_phone
     data:
       message: Anna left work 2 minutes ago.
       title: On the move...
@@ -204,7 +204,7 @@
   - after: '16:30'
     condition: time
   action:
-  - service: notify.mobile_app_tom_s_phone
+  - service: notify.mobile_app_toms_phone
     data:
       message: '{{ trigger.entity_id }} left Leeds Station 2 minutes ago.'
 - id: '1580903225785'
@@ -631,7 +631,7 @@
         group: Garage
         channel: Garage
         vibrationPattern: 10, 100, 500, 100, 500, 500
-    service: notify.mobile_app_tom_s_phone
+    service: notify.mobile_app_toms_phone
   - data:
       entity_id:
       - media_player.living_room_display
@@ -1845,27 +1845,27 @@
       last_face_input: input_number.office_cube_current_face
       cube: 9f50d49473ecd72dad9e827acb4e6f60
       face_1_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 1
       face_2_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 2
       face_3_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 3
       face_4_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 4
       face_5_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 5
       face_6_flip:
-      - service: notify.mobile_app_tom_s_phone
+      - service: notify.mobile_app_toms_phone
         data:
           message: Side 6
       face_1_knock:
@@ -1974,7 +1974,7 @@
   - condition: template
     value_template: '{{trigger.from_state.state != trigger.to_state.state}}'
   action:
-  - service: notify.mobile_app_tom_s_phone
+  - service: notify.mobile_app_toms_phone
     data:
       title: ESPresense
       message: Tom is now in the {{states('sensor.toms_phone_ble')}}
