--- a/includes/notify.yaml
+++ b/includes/notify.yaml
@@ -8,4 +8,4 @@
   platform: group
   services:
     - service: mobile_app_anna_s_phone
-    - service: mobile_app_tom_s_phone
+    - service: mobile_app_toms_phone
